lousey commit message

--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <html>
   <p
 
-    ><font size=+1>Test File for the pdf_cleanup</font></p>
+    >Test File for the pdf_cleanup</p>
+  remove me
 </html>
